--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.1",
+        "cordova-plugin-whitelist": "^1.3.1",        
         "@angular/common": "4.1.3",
         "@angular/compiler": "4.1.3",
         "@angular/compiler-cli": "4.1.3",
@@ -35,10 +41,30 @@
         "@ionic/app-scripts": "2.1.4",
         "typescript": "2.3.4"
     },
-    "description": "An Ionic project",
+    "description": "App puERta",    
     "cordova": {
         "plugins": {
-            "cordova-plugin-inappbrowser": {}
-        }
-    }
+            "cordova-plugin-device": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-inappbrowser": {},            
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-device",
+        "cordova-plugin-console",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-statusbar",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [
+        "android"
+    ]    
 }
