--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@ionic/storage": "2.0.1",
     "cordova-android": "^6.3.0",
     "cordova-ios": "^4.4.0",
+    "cordova-plugin-add-swift-support": "^1.7.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-imei": "^1.1.0",
     "cordova-plugin-inappbrowser": "^1.7.1",
+    "cordova-plugin-ionic": "^2.0.1",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.2",
@@ -56,7 +58,14 @@
       "cordova-plugin-statusbar": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-imei": {},
-      "com.joandilee.imeiplugin": {}
+      "com.joandilee.imeiplugin": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "7dfaf50a",
+        "CHANNEL_NAME": "Master",
+        "UPDATE_METHOD": "background",
+        "UPDATE_API": "https://api.ionicjs.com",
+        "MAX_STORE": "2"
+      }
     },
     "platforms": [
       "android",
